<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.misitetong.jdk</groupId>
        <artifactId>JDKFeature</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>JDK21</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source> <!-- 或者你使用的 Java 版本 -->
                    <target>21</target> <!-- 与 source 保持一致 -->
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>--source</arg>
                        <arg>21</arg> <!-- 指定源代码版本 -->
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
